Saving advanced preferences leads to segfault

VLC media player 4.0.0-dev Otto Chriek (revision c6436c806)
[00005594e73f5820] main libvlc debug: VLC media player - 4.0.0-dev Otto Chriek
[00005594e73f5820] main libvlc debug: Copyright © 1996-2022 the VideoLAN team
[00005594e73f5820] main libvlc debug: revision c6436c806
[00005594e73f5820] main libvlc debug: configured with ./configure  '--disable-nls' '--disable-rpath' '--enable-dbus' '--enable-debug' '--disable-gprof' '--disable-cprof' '--disable-coverage' '--enable-optimizations' '--enable-ssp' '--enable-sse' '--disable-neon' '--disable-altivec' '--disable-optimize-memory' '--enable-run-as-root' '--enable-sout' '--enable-lua' '--enable-vlm' '--disable-addonmanagermodules' '--disable-archive' '--disable-live555' '--disable-dc1394' '--disable-dv1394' '--disable-linsys' '--disable-dvdread' '--disable-dvdnav' '--disable-bluray' '--disable-opencv' '--disable-smbclient' '--disable-dsm' '--disable-sftp' '--disable-nfs' '--disable-smb2' '--disable-v4l2' '--disable-decklink' '--enable-vcd' '--disable-libcddb' '--disable-screen' '--disable-vnc' '--disable-freerdp' '--disable-macosx-avfoundation' '--disable-asdcp' '--disable-dvbpsi' '--disable-gme' '--disable-sid' '--disable-ogg' '--disable-shout' '--enable-matroska' '--disable-mod' '--disable-mpc' '--disable-shine' '--disable-omxil' '--disable-rpi-omxil' '--disable-mad' '--disable-mpg123' '--disable-gst-decode' '--enable-merge-ffmpeg' '--enable-avcodec' '--enable-libva' '--enable-dxva2' '--disable-d3d11va' '--enable-avformat' '--enable-swscale' '--disable-postproc' '--disable-faad' '--disable-aom' '--disable-dav1d' '--disable-vpx' '--disable-twolame' '--disable-fdkaac' '--disable-a52' '--disable-dca' '--disable-flac' '--disable-libmpeg2' '--disable-vorbis' '--disable-tremor' '--disable-speex' '--enable-opus' '--disable-spatialaudio' '--disable-theora' '--disable-oggspots' '--disable-daala' '--disable-schroedinger' '--disable-png' '--disable-jpeg' '--disable-bpg' '--disable-x262' '--disable-x265' '--disable-x264' '--disable-x26410b' '--disable-mfx' '--disable-rav1e' '--disable-rnnoise' '--disable-rist' '--disable-fluidsynth' '--disable-fluidlite' '--enable-zvbi' '--disable-telx' '--disable-aribsub' '--disable-aribb25' '--disable-kate' '--disable-tiger' '--disable-css' '--disable-gles2' '--with-x' '--enable-xcb' '--enable-vdpau' '--enable-wayland' '--enable-freetype' '--disable-fribidi' '--disable-harfbuzz' '--enable-fontconfig' '--enable-libass' '--disable-svg' '--disable-svgdec' '--disable-directx' '--enable-kms' '--disable-caca' '--disable-kva' '--disable-mmal' '--enable-pulse' '--enable-alsa' '--disable-oss' '--disable-sndio' '--disable-wasapi' '--disable-jack' '--disable-opensles' '--enable-samplerate' '--disable-soxr' '--disable-kai' '--disable-chromaprint' '--disable-chromecast' '--enable-qt' '--enable-skins2' '--disable-macosx' '--disable-sparkle' '--disable-minimal-macosx' '--disable-ncurses' '--disable-lirc' '--disable-srt' '--disable-goom' '--disable-projectm' '--disable-vsxu' '--disable-avahi' '--disable-udev' '--disable-mtp' '--disable-upnp' '--disable-microdns' '--enable-libxml2' '--enable-libgcrypt' '--enable-gnutls' '--disable-taglib' '--enable-secret' '--disable-kwallet' '--disable-update-check' '--disable-osx-notifications' '--enable-notify' '--enable-libplacebo' '--enable-medialibrary' '--enable-vlc'
Thread 13 "vlc" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd459e700 (LWP 1143507)]
AdvPrefsPanel::apply (this=0x0) at gui/qt/dialogs/preferences/complete_preferences.cpp:682
682	    foreach ( ConfigControl *cfg, controls )

(gdb) backtrace full
#0  AdvPrefsPanel::apply (this=0x0) at gui/qt/dialogs/preferences/complete_preferences.cpp:682
        _container_ = {c = {<QListSpecialMethods<ConfigControl*>> = {<No data fields>}, {p = {static shared_null = {
                  ref = {atomic = {_q_value = {<std::__atomic_base<int>> = {static _S_alignment = 4, 
                          _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x0}, 
              d = 0x0}}, i = {i = 0x7fffd6eff659 <QMetaObject::cast(QObject const*) const+41>}, e = {
            i = 0x7fffde1b37e0}, control = -568555632}
#1  0x00007ffff4b69309 in PrefsTree::applyAll (this=0x7fffde197bd0)
    at gui/qt/dialogs/preferences/complete_preferences.cpp:300
        subcat_item = 0x7fffde1b7f80
        i_sc_index = <optimized out>
        cat_item = 0x7fffde1c8790
        i_cat_index = 0
#2  0x00007ffff4b6b41d in PrefsDialog::save (this=0x7fffde1a5950) at gui/qt/dialogs/preferences/preferences.cpp:266
        __func__ = "save"
#3  0x00007fffd6f221d0 in QMetaObject::activate(QObject*, int, int, void**) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fffd7a03806 in QAbstractButton::clicked(bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#5  0x00007fffd7a03a2e in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#6  0x00007fffd7a04e73 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#7  0x00007fffd7a05035 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#8  0x00007fffd79512b6 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#9  0x00007fffd790ea66 in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#10 0x00007fffd7918343 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#11 0x00007fffd6ef680a in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007fffd7917457 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#13 0x00007fffd796d35d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#14 0x00007fffd79701ec in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007fffd790ea66 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007fffd79180f0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007fffd6ef680a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#18 0x00007fffd72df7d3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#19 0x00007fffd72e110b in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#20 0x00007fffd72bb35b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#21 0x00007fffd436432e in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#22 0x00007fffd62fd17d in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007fffd62fd400 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007fffd62fd4a3 in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007fffd6f4e435 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007fffd6ef53ab in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#27 0x00007fffd6efd116 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#28 0x00007ffff4ae6807 in Thread (obj=0x55555562da10) at gui/qt/qt.cpp:855
        p_intf = 0x55555562da10
        vlc_name = "vlc"
        argv = {0x7fffdc0096c0 "vlc", 0x0, 0x0}
        argc = 1
        argvReleaser = std::unique_ptr<char *[]> = {get() = 0x7fffd459ddd0}
        compositor = <optimized out>
        compositorFactory = {m_intf = 0x55555562da10, m_compositorName = {static null = {<No data fields>}, d = 0x7fffdc01daf0}, m_compositorIndex = 2}
        app = {<QApplication> = {<No data fields>}, static staticMetaObject = {d = {superdata = 0x7fffd7e0f620 <QApplication::staticMetaObject>, stringdata = 0x7ffff4d5bf00, data = 0x7ffff4d5be80, static_metacall = 0x7ffff4cf2210 <QVLCApp::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, m_defaultStyle = {static null = {<No data fields>}, d = 0x7fffd4419700}}
        __func__ = "Thread"
        __PRETTY_FUNCTION__ = "void* Thread(void*)"
        s_style = {static null = {<No data fields>}, d = 0x7fffdc1b84c0}
#29 0x00007ffff7f63609 in start_thread (arg=<optimized out>) at pthread_create.c:477
        ret = <optimized out>
        pd = <optimized out>
        unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140736756049664, 163986077545653834, 140737488345038, 140737488345039, 140737488345168, 140736756047616, -164046291964795318, -163968401279687094}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
        not_first_call = 0
#30 0x00007ffff7e8a263 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95