qt: fix saving advanced preferences

fixes #26510.